--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,5 +1,5 @@
 ---
-import '../styles/Components/header.css';
+import '../styles/components/header.css';
 ---
 
 <header class="spartacus-header" role="banner">
@@ -18,11 +18,14 @@ import '../styles/Components/header.css';
             <ul class="nav-menu">
                 <li><a href="/" class="nav-link">Home</a></li>
                 <li><a href="/about" class="nav-link">About</a></li>
-                <li><a href="/strenghtsports" class="nav-link">Strength</a></li>
-                <li><a href="/become-a-member" class="nav-link">Join</a></li>
+                <li><a href="/strenghtsports" class="nav-link">Strenghtsports</a></li>
+                <li><a href="/become-a-member" class="nav-link">Membership</a></li>
                 <li><a href="/committee" class="nav-link">Committees</a></li>
-                <li><a href="https://merch.tskvspartacus.nl/" target="_blank" rel="noopener noreferrer" class="nav-link">Shop</a></li>
+                <li><a href="https://merch.tskvspartacus.nl/" target="_blank" rel="noopener noreferrer" class="nav-link">Webshop</a></li>
                 <li><a href="/contact" class="nav-link">Contact</a></li>
+                <li class="mobile-join-link">
+                    <a href="/register" class="nav-link mobile-join-button">Join Spartacus</a>
+                </li>
             </ul>
         </nav>
 
