--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,3 +1,7 @@
+---
+import '../styles/Components/header.css';
+---
+
 <header class="spartacus-header" role="banner">
     <div class="header-container">
         <a href="/" class="logo" aria-label="Spartacus Home">
@@ -14,12 +18,11 @@
                 <li><a href="/" class="nav-link">Home</a></li>
                 <li><a href="/about" class="nav-link">About</a></li>
                 <li><a href="/strengthsports" class="nav-link">Strengthsports</a></li>
-                <li><a href="/become-a-member" class="nav-link">Membership</a></li>
                 <li><a href="/committee" class="nav-link">Committees</a></li>
-                <li><a href="https://merch.tskvspartacus.nl/" target="_blank" rel="noopener noreferrer" class="nav-link">Webshop</a></li>
                 <li><a href="/contact" class="nav-link">Contact</a></li>
-                <li class="mobile-join-link">
-                    <a href="/register" class="nav-link mobile-join-button">Join Spartacus</a>
+                <li><a href="https://merch.tskvspartacus.nl/" target="_blank" rel="noopener noreferrer" class="nav-link">Shop</a></li>
+                <li class="desktop-join-link">
+                    <a href="/register" class="nav-link desktop-join-button">Join</a>
                 </li>
             </ul>
         </nav>
@@ -68,3 +71,4 @@
         });
     });
 </script>
+
