--- a/src/pages/register.astro
+++ b/src/pages/register.astro
@@ -12,15 +12,15 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 </head>
 <body>
 
-//import header
+<!-- Header -->
 <Header />
 
 <main>
 nothing yet
 </main>
 
-//import Footer
-<footer />
+<!-- Footer -->
+<Footer />
 
 </body>
 </html>
