--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -17,7 +17,7 @@ import '../styles/Components/header.css';
             <ul class="nav-menu">
                 <li><a href="/" class="nav-link">Home</a></li>
                 <li><a href="/about" class="nav-link">About</a></li>
-                <li><a href="/strengthsports" class="nav-link">Strengthsports</a></li>
+                <li><a href="/strenghtsports" class="nav-link">Strenghtsports</a></li>
                 <li><a href="/committee" class="nav-link">Committees</a></li>
                 <li><a href="/contact" class="nav-link">Contact</a></li>
                 <li><a href="https://merch.tskvspartacus.nl/" target="_blank" rel="noopener noreferrer" class="nav-link">Shop</a></li>
